# learn-opengl

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md  application.cpp  compile_commands.json  main.cpp  shader.cpp  shader.h  vcpkg.json
GLAD/include/glad/: glad.h
GLAD/src/: glad.c
assets/models/container/: container.mtl
assets/models/grass/: grass.mtl
assets/models/window/: window.mtl
includes/GLAD/src/: glad.c
shaders/: fragmentShader.glsl  fragmentShaderPhong.glsl  postFragment.glsl  vertexShader.glsl  vertexShaderDefault.glsl  voxelFragment.glsl  voxelVertex.glsl
src/: application.cpp  application.h
src/render/: camera.cpp  camera.h  mesh.cpp  mesh.h  model.cpp  model.h  shader.cpp  shader.h  texture.cpp  texture.h  vertex.h
src/systems/: input_system.cpp  input_system.h
src/voxel/: voxel_renderer.cpp  voxel_renderer.h  voxel_world.cpp  voxel_world.h
